compiler/tests/fail/param_expansion/expression_arg.jazz
param int N = (int)(64u) 3;

inline fn f (reg u64[N] a) { }
